--- a/style.css
+++ b/style.css
@@ -15,19 +15,17 @@ body {
 .grid__container {
     position:absolute;
     top:150px;
-    background-color: #EDF2F8;
     display:grid;
     grid-template-columns: auto auto auto auto;
     gap:20px;
-    padding:20px;
-    box-shadow: 5px 5px 15px #D3DAE4;
 }
 .grid_item {
     width:100%;
     height:100%;
     background-color: white;
     padding:25px;
-    border-radius:7px;
+    border-radius:15px;
+    box-shadow: 5px 5px 15px #D3DAE4;
 }
 .item1 {
     grid-column: 1 / span 2;
@@ -117,10 +115,12 @@ body {
 .item1 .info > p {
     color:hsl(210, 46%, 95%);
     font-size:1.5rem;
+    padding:10px 0;
 }
 .item1 .quote {
     color:hsl(0, 0%, 81%);
     width:100%;
+    padding:10px 0;
 }
 
 
@@ -141,10 +141,12 @@ body {
 .item2 .info > p {
     color:hsl(210, 46%, 95%);
     font-size:1.5rem;
+    padding:10px 0;
 }
 .item2 .quote {
     color:hsl(0, 0%, 81%);
     width:100%;
+    padding:10px 0;
 }
 
 
@@ -166,10 +168,12 @@ body {
 .item3 .info > p {
     color:#4E5359;
     font-size:1.5rem;
+    padding:10px 0;
 }
 .item3 .quote {
     color:hsl(0, 0%, 81%);
     width:100%;
+    padding:10px 0;
 }
 
 
@@ -192,10 +196,12 @@ body {
 .item4 .info > p {
     color:#4E5359;
     font-size:1.5rem;
+    padding:10px 0;
 }
 .item4 .quote {
     color:hsl(0, 0%, 81%);
     width:100%;
+    padding:10px 0;
 }
 
 
@@ -219,13 +225,17 @@ body {
 .item5 .info > p {
     color:white;
     font-size:1.5rem;
+    padding:10px 0;
 }
 .item5 .quote {
     color:hsl(0, 0%, 81%);
     width:100%;
+    padding:10px 0;
 }
 
 .word_box p{
     padding-left:20px;
-    font-size:.8rem;
+    font-size:1;
 }
+
+
